--- a/style.css
+++ b/style.css
@@ -15,9 +15,6 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 Dufrio is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
-
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
 
 /*--------------------------------------------------------------
@@ -27,17 +24,12 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	1.1 Menus
 2.0 Accessibility
 3.0 Alignments
-4.0 Clearings
-5.0 Widgets
-6.0 Content
-	6.1 Posts and pages
-	6.2 Comments
-7.0 Infinite scroll
-8.0 Media
-	8.1 Captions
-	8.2 Galleries
-9.0 Custom CSS
-  9.1 Setup
+4.0 Media
+	4.1 Captions
+	4.2 Galleries
+	
+5.0 Custom CSS
+  5.1 Setup
   9.2 Header
   9.3 Footer
   9.4 Post Destaques
@@ -48,7 +40,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   9.9 Not found / 404
   9.10 Newsletter
   9.11 Queries
-  9.12 Plugins
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
@@ -99,22 +90,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	width: 200px;
 }
 
-.main-navigation ul ul li {
-
-}
-
-.main-navigation li:hover > a,
-.main-navigation li.focus > a {
-}
-
-.main-navigation ul ul :hover > a,
-.main-navigation ul ul .focus > a {
-}
-
-.main-navigation ul ul a:hover,
-.main-navigation ul ul a.focus {
-}
-
 .main-navigation ul li:hover > ul,
 .main-navigation ul li.focus > ul {
 	left: auto;
@@ -125,25 +100,10 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	left: 100%;
 }
 
-.main-navigation .current_page_item > a,
-.main-navigation .current-menu-item > a,
-.main-navigation .current_page_ancestor > a,
-.main-navigation .current-menu-ancestor > a {
-}
-
 /* Small menu. */
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
-}
-
-@media screen and (min-width: 37.5em) {
-	.menu-toggle {
-		display: none;
-	}
-	.main-navigation ul {
-		display: block;
-	}
 }
 
 .site-main .comment-navigation,
@@ -228,129 +188,10 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 }
 
 /*--------------------------------------------------------------
-4.0 Clearings
---------------------------------------------------------------*/
-.clear:before,
-.clear:after,
-.entry-content:before,
-.entry-content:after,
-.comment-content:before,
-.comment-content:after,
-.site-header:before,
-.site-header:after,
-.site-content:before,
-.site-content:after,
-.site-footer:before,
-.site-footer:after {
-	content: "";
-	display: table;
-	table-layout: fixed;
-}
-
-.clear:after,
-.entry-content:after,
-.comment-content:after,
-.site-header:after,
-.site-content:after,
-.site-footer:after {
-	clear: both;
-}
-
-/*--------------------------------------------------------------
-5.0 Widgets
---------------------------------------------------------------*/
-.widget {
-	margin: 0 0 1.5em;
-	position: relative;
-	z-index: 999;
-}
-
-/* Make sure select elements fit in widgets. */
-.widget select {
-	max-width: 100%;
-}
-
-/*--------------------------------------------------------------
-6.0 Content
+4.0 Media
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
-6.1 Posts and pages
---------------------------------------------------------------*/
-.sticky {
-	display: block;
-}
-
-.hentry {
-	margin: 0 0 1.5em;
-}
-
-.byline,
-.updated:not(.published) {
-	display: none;
-}
-
-.single .byline,
-.group-blog .byline {
-	display: inline;
-}
-
-.page-content,
-.entry-content,
-.entry-summary {
-	margin: 1.5em 0 0;
-}
-
-.page-links {
-	clear: both;
-	margin: 0 0 1.5em;
-}
-
-/*--------------------------------------------------------------
-6.2 Comments
---------------------------------------------------------------*/
-.comment-content a {
-	word-wrap: break-word;
-}
-
-.bypostauthor {
-	display: block;
-}
-
-/*--------------------------------------------------------------
-7.0 Infinite scroll
---------------------------------------------------------------*/
-/* Globally hidden elements when Infinite Scroll is supported and in use. */
-.infinite-scroll .posts-navigation, /* Older / Newer Posts Navigation (always hidden) */
-.infinite-scroll.neverending .site-footer { /* Theme Footer (when set to scrolling) */
-	display: none;
-}
-
-/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before. */
-.infinity-end.neverending .site-footer {
-	display: block;
-}
-
-/*--------------------------------------------------------------
-8.0 Media
---------------------------------------------------------------*/
-.page-content .wp-smiley,
-.entry-content .wp-smiley,
-.comment-content .wp-smiley {
-	border: none;
-	margin-bottom: 0;
-	margin-top: 0;
-	padding: 0;
-}
-
-/* Make sure embeds and iframes fit their containers. */
-embed,
-iframe,
-object {
-	max-width: 100%;
-}
-
-/*--------------------------------------------------------------
-8.1 Captions
+4.1 Captions
 --------------------------------------------------------------*/
 .wp-caption {
 	margin-bottom: 1.5em;
@@ -372,7 +213,7 @@ object {
 }
 
 /*--------------------------------------------------------------
-8.2 Galleries
+4.2 Galleries
 --------------------------------------------------------------*/
 .gallery {
 	margin-bottom: 1.5em;
@@ -422,20 +263,12 @@ object {
 }
 
 /*--------------------------------------------------------------
-9.0 Custom CSS
+5.0 Custom CSS
 --------------------------------------------------------------*/
 
-/*-----------------*/
-/*--- 9.1 SETUP ---*/
-/*-----------------*/
-
-/*------------------
-Colors:
-blue: #092f87;
-dark-blue: #021541;
-light-blue: #3b7cca;
-gray: #e2e3e6;
--------------------*/
+/*-------------------------------
+5.1 Setup
+-------------------------------*/
 
 @font-face {
   font-family: "Panton";
@@ -484,7 +317,7 @@ ul li {
   margin: 0 0 10px;
 }
 
-/*--- CLASSES ---*/
+/*--- Classes ---*/
 
 .site-wrapper {
   overflow: hidden;
@@ -586,7 +419,7 @@ h1.page-title {
   vertical-align: center;
 }
 
-/*--- PAGINATION ---*/
+/*--- Pagination ---*/
 
 .pagination {
   text-align: center;
@@ -627,7 +460,7 @@ h1.page-title {
   border-radius: 100%;
 }
 
-/*-- FORMS ---*/
+/*-- Forms ---*/
 
 input {
   background-color: transparent;
@@ -675,13 +508,20 @@ button:active {
   top: 2px;
 }
 
-/*---------------------*/
-/*--- 9.1 SETUP END ---*/
-/*---------------------*/
+/*--- Plugins ---*/
 
-/*------------------*/
-/*--- 9.2 HEADER ---*/
-/*------------------*/
+.comments-title {
+  color: #092f87;
+  font-size: 1.2em;
+  font-family: "Lato", sans-serif;
+  padding: 30px 0 30px 20px;
+  border-top: 1px solid #bdc7d8;
+  margin-top: 40px;
+}
+
+/*-------------------------------
+5.2 Header
+-------------------------------*/
 
 .nav-menu {
   background-color: #092f87;
@@ -862,13 +702,9 @@ button:active {
   display: none;
 }
 
-/*----------------------*/
-/*--- 9.2 HEADER END ---*/
-/*----------------------*/
-
-/*------------------*/
-/*--- 9.3 FOOTER ---*/
-/*------------------*/
+/*-------------------------------
+5.X Footer
+-------------------------------*/
 
 #footer {
   background-color: #092f87;
@@ -914,6 +750,8 @@ button:active {
   margin: 0 0 15px;;
 }
 .footer-archives-info li {
+  display: inline-block;
+  width: 49%;
   color: #fff;
   font-family: "Lato", sans-serif;
 }
@@ -973,13 +811,9 @@ button:active {
   color: #fff;
 }
 
-/*----------------------*/
-/*--- 9.3 FOOTER END ---*/
-/*----------------------*/
-
-/*------------------------*/
-/*--- 9.4 RECENT POSTS ---*/
-/*------------------------*/
+/*-------------------------------
+5.4 Recent Posts
+-------------------------------*/
 
 .post-recent-box {
   display: block;
@@ -1042,13 +876,9 @@ button:active {
   color: #555;
 }
 
-/*----------------------------*/
-/*--- 9.4 RECENT POSTS END ---*/
-/*----------------------------*/
-
-/*-------------------------*/
-/*--- 9.5 POST DESTAQUE ---*/
-/*-------------------------*/
+/*-------------------------------
+5.5 Post Destaque
+-------------------------------*/
 
 .post-destaque-box {
   margin: 0;
@@ -1103,13 +933,9 @@ button:active {
   color: #3b7cca;
 }
 
-/*-----------------------------*/
-/*--- 9.5 POST DESTAQUE END ---*/
-/*-----------------------------*/
-
-/*------------------------*/
-/*--- 9.6 POST POPULAR ---*/
-/*------------------------*/
+/*-------------------------------
+5.6 Posts Populares
+-------------------------------*/
 
 .popular {
   margin: 0 0 30px;
@@ -1172,13 +998,9 @@ button:active {
   color: #3b7cca;
 }
 
-/*----------------------------*/
-/*--- 9.6 POST POPULAR END ---*/
-/*----------------------------*/
-
-/*---------------------*/
-/*--- 9.7 POST PAGE ---*/
-/*---------------------*/
+/*-------------------------------
+5.7 Post Page
+-------------------------------*/
 
 #post hr {
   margin: 0;
@@ -1242,15 +1064,9 @@ button:active {
   margin-bottom: 0;
 }
 
-
-
-/*-------------------------*/
-/*--- 9.7 POST PAGE END ---*/
-/*-------------------------*/
-
-/*----------------*/
-/*--- 9.8 TAGS ---*/
-/*----------------*/
+/*-------------------------------
+5.8 Tags
+-------------------------------*/
 
 .tags {
   background-color: #fff;
@@ -1308,13 +1124,9 @@ button:active {
   background-size: cover;
 }
 
-/*--------------------*/
-/*--- 9.8 TAGS END ---*/
-/*--------------------*/
-
-/*-------------------------*/
-/*--- 9.9 NOT FOUND/404 ---*/
-/*-------------------------*/
+/*-------------------------------
+5.9 Not found & 404
+-------------------------------*/
 
 .not-found {
   margin: 100px 0px 200px;
@@ -1353,13 +1165,9 @@ button:active {
   padding: 5px 5px 7px;
 }
 
-/*-----------------------------*/
-/*--- 9.9 NOT FOUND/404 END ---*/
-/*-----------------------------*/
-
-/*-----------------------*/
-/*--- 9.10 Newsletter ---*/
-/*-----------------------*/
+/*-------------------------------
+9.10 Newsletter
+-------------------------------*/
 
 .absolute {
   position: absolute;
@@ -1439,13 +1247,9 @@ div.wpcf7-response-output {
   border-radius: 5px;
 }
 
-/*---------------------------*/
-/*--- 9.10 Newsletter END ---*/
-/*---------------------------*/
-
-/*--------------------*/
-/*--- 9.11 SIDEBAR ---*/
-/*--------------------*/
+/*-------------------------------
+9.11 Sidebar
+-------------------------------*/
 
 #sidebar-box {
   height: auto;
@@ -1459,6 +1263,15 @@ div.wpcf7-response-output {
 .sidebar-wrapper {
   top: 30px;
 }
+
+.sidebar-posts-img-box img {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+/*
 
 .sidebar-posts-box {
   background-color: #092f87;
@@ -1492,44 +1305,32 @@ div.wpcf7-response-output {
   margin-bottom: 15px;
 }
 
-.sidebar-posts-img-box img {
-  display: block;
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
-}
+*/
 
-/*------------------------*/
-/*--- 9.11 SIDEBAR END ---*/
-/*------------------------*/
-
-/*--------------------*/
-/*--- 9.12 QUERIES ---*/
-/*--------------------*/
+/*-------------------------------
+9.12 Queries
+-------------------------------*/
 
 @media all and (max-width: 992px) {
   
-  /*--- 9.2 HEADER ---*/
+  /* Header */
   
   .nav-menu .container {
     width: 100%;
     margin: 0;
   }
   
-  /*--- 9.2 HEADER END ---*/
-  
 }
 
 @media all and (max-width: 768px) {
   
-  /*--- 9.1 SETUP ---*/
+  /* Setup */
   
   .post-date p {
     padding: 15px 10px;
   }
   
-  /*--- 9.1 SETUP END ---*/
-  /*--- 9.2 HEADER ---*/
+  /* Header */
   
   .navbar-nav {
     margin: 0;
@@ -1555,8 +1356,6 @@ div.wpcf7-response-output {
     margin-top: 20px;
   }
   
-  /*Category menu */
-  
   .navbar.navbar-default .menu-category .current-cat>a:link,
   .navbar.navbar-default .menu-category .current-cat>a:visited,
   .navbar.navbar-default .menu-category .current-cat>a:hover,
@@ -1570,15 +1369,13 @@ div.wpcf7-response-output {
     background-color: #e6a005;
   }
   
-  /*--- 9.2 HEADER END ---*/
-  /*--- 9.5 RECENT POST ---*/
+  /* Recent Posts */
   
   .post-recent-box-info h3  {
     font-size: 1.0em;
   }
   
-  /*--- 9.5 RECENT POST END ---*/
-  /*--- 9.4 POST DESTAQUE ---*/
+  /* Post Destaque */
   
   .post-destaque-box {
     margin: 20px 0 0;
@@ -1589,8 +1386,7 @@ div.wpcf7-response-output {
     width: 100%;
   }
   
-  /*--- 9.4 POST DESTAQUE END ---*/
-  /*--- 9.6 POST POPULAR ---*/
+  /* Post Popular */
   
   .post-popular-box {
     margin: 20px 0 0;
@@ -1601,8 +1397,7 @@ div.wpcf7-response-output {
     width: 100%;
   }
   
-  /*--- 9.6 POST POPULAR END ---*/
-  /*--- 9.9 NOT FOUND/404 ---*/
+  /* Not Found & 404 */
   
   .not-found {
     margin: 80px 0px;
@@ -1612,13 +1407,18 @@ div.wpcf7-response-output {
     padding: 60px 15px;
   }
   
-  /*--- 9.9 NOT FOUND/404 END ---*/
+  /* Footer */
+  
+  .footer-archives-info li {
+    display: block;
+    width: 100%;
+  }
   
 }
 
 @media all and (max-width: 460px) {
   
-  /*--- 9.1 SETUP ---*/
+  /* Setup */
   
   body {
     font-size: 14px;
@@ -1629,8 +1429,7 @@ div.wpcf7-response-output {
     font-size: 1.6em;
   }
   
-  /*--- 9.1 SETUP END ---*/
-  /*--- 9.2 HEADER ---*/
+  /* Header */
   
   .menu-list .custom-search-form {
     margin-left: 0;
@@ -1643,8 +1442,7 @@ div.wpcf7-response-output {
     margin: 0 0 15px;
   }
   
-  /*--- 9.2 HEADER END ---*/
-  /*--- 9.5 RECENT POST ---*/
+  /* Recent Post */
   
   .post-recent-box {
     max-height: 350px;
@@ -1664,8 +1462,7 @@ div.wpcf7-response-output {
     display: none;
   }
   
-  /*--- 9.5 RECENT POST END ---*/
-  /*--- 9.4 POST DESTAQUE ---*/
+  /* Post Destaque */
   
   .destaques .col-xs-6 {
     width: 100%;
@@ -1685,8 +1482,7 @@ div.wpcf7-response-output {
     text-align: center;
   }
   
-  /*--- 9.4 POST DESTAQUE ---*/
-  /*--- 9.6 POST POPULAR ---*/
+  /* Post Popular */
   
   .popular .col-xs-6 {
     width: 100%;
@@ -1706,35 +1502,11 @@ div.wpcf7-response-output {
     text-align: center;
   }
   
-  /*--- 9.6 POST POPULAR ---*/
-  /*--- 9.7 POST PAGE ---*/
+  /* Post Page */
   
   #post .container,
   #post .col-sm-9 {
     padding: 0;
   }
   
-  /*--- 9.7 POST PAGE END ---*/
-  
 }
-
-/*------------------------*/
-/*--- 9.12 QUERIES END ---*/
-/*------------------------*/
-
-/*--------------------*/
-/*--- 9.13 PLUGINS ---*/
-/*--------------------*/
-
-.comments-title {
-  color: #092f87;
-  font-size: 1.2em;
-  font-family: "Lato", sans-serif;
-  padding: 30px 0 30px 20px;
-  border-top: 1px solid #bdc7d8;
-  margin-top: 40px;
-}
-
-/*------------------------*/
-/*--- 9.13 PLUGINS END ---*/
-/*------------------------*/
