--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: Agência Delucca
 Author URI: http://www.agenciadelucca.com.br
 Description: Blog da empresa Dufrio
-Version: 2.1.0
+Version: 2.2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: dufrio
@@ -365,7 +365,7 @@ ul li {
   color: #092f87;
   font-size: 1.2em;
   padding: 13px 28px;
-  background-color: #fff;
+  background-color: transparent;
   border-radius: 5px;
   border: 1px solid #092f87;
   text-decoration: none;
@@ -374,19 +374,38 @@ ul li {
   position: absolute;
   bottom: 10px;
   right: 10px;
+  z-index: 999;
+  overflow: hidden;
 }
 
 .read-more-btn:hover,
 .read-more-btn:active {
-  background-color: #092f87;
   color: #fff;
+}
+
+.fill:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: -9;
+  background-color: #092f87;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+}
+
+.fill:hover:after {
+  top: 0;
 }
 
 .page-title {
   color: #fff;
   text-align: center;
-  margin: 0 0 30px;
-  padding: 30px 0;
+  margin: 30px 0;
+  padding: 60px 0;
   font-size: 2.4em;
   background-color: #3b7cca;
 }
@@ -481,7 +500,8 @@ button {
   box-shadow: none;
   color: #3b7cca;
   font-size: 1.3em;
-  transition: all 0.3s;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
 }
 
 ::-webkit-input-placeholder {
@@ -664,6 +684,39 @@ ul.sub-menu li:first-child {
   
 }
 
+/* Mobile Button */
+
+.main-nav {
+  display: block;
+  position: relative;
+}
+
+.mobile-nav {
+  display: none;
+  width: 100%;
+  padding: 15px 15px;
+  color: #fff;
+}
+
+.mobile-nav.active,
+.mobile-nav:hover,
+.mobile-nav:active {
+  top: 0;
+  background-color: #e6a005;
+}
+
+@media (max-width: 990px) {
+  
+  .main-nav {
+    display: none;
+  }
+  
+  .mobile-nav {
+    display: block;
+  }
+  
+}
+
 /*-------------------------------
 5.X Footer
 -------------------------------*/
@@ -738,8 +791,8 @@ ul.sub-menu li:first-child {
   margin-top: 25px;
   width: 40px;
   height: 40px;
-  line-height: 40px;
-  font-size: 2em;
+  line-height: 35px;
+  font-size: 1.4em;
   text-align: center;
   text-decoration: none;
   color: #3b7cca;
@@ -781,7 +834,7 @@ ul.sub-menu li:first-child {
   display: block;
   width: 100%;
   height: auto;
-  box-shadow: 2px 2px 20px transparent;
+  box-shadow: 2px 2px 5px transparent;
   position: relative;
   background-color: #fff;
   margin-bottom: 30px;
@@ -790,7 +843,7 @@ ul.sub-menu li:first-child {
 }
 
 .post-recent-box:hover {
-  box-shadow: 2px 0px 20px #222;
+  box-shadow: 2px 2px 5px #222;
 }
 
 .post-recent-box-img {
@@ -846,12 +899,12 @@ ul.sub-menu li:first-child {
   margin: 0;
   background-color: #fff;
   box-sizing: border-box;
-  box-shadow: 2px 2px 20px transparent;
+  box-shadow: 2px 2px 5px transparent;
   transition: all 0.3s
 }
 
 .post-destaque-box:hover {
-  box-shadow: 2px 2px 20px #222;
+  box-shadow: 2px 2px 5px #222;
 }
 
 .post-destaque-box-img {
@@ -886,13 +939,7 @@ ul.sub-menu li:first-child {
   display: block;
   width: 100%;
   color: #092f87;
-  text-decoration: none;
   transition: all 0.3s;
-}
-
-.post-destaque-box-title a:hover,
-.post-destaque-box-title a:active {
-  color: #3b7cca;
 }
 
 /*-------------------------------
@@ -911,12 +958,12 @@ ul.sub-menu li:first-child {
   margin: 0;
   background-color: #fff;
   box-sizing: border-box;
-  box-shadow: 2px 2px 20px transparent;
+  box-shadow: 2px 2px 5px transparent;
   transition: all 0.3s
 }
 
 .post-popular-box:hover {
-  box-shadow: 2px 2px 20px #222;
+  box-shadow: 2px 2px 5px #222;
 }
 
 .post-popular-box-img {
@@ -951,18 +998,16 @@ ul.sub-menu li:first-child {
   display: block;
   width: 100%;
   color: #092f87;
-  text-decoration: none;
   transition: all 0.3s;
 }
 
-.post-popular-box-title a:hover,
-.post-popular-box-title a:active {
-  color: #3b7cca;
-}
-
 /*-------------------------------
-5.7 Post Page
+9.7 Posst Page
 -------------------------------*/
+
+#post {
+  margin: 30px 0 0;
+}
 
 #post hr {
   margin: 0;
@@ -1048,7 +1093,7 @@ ul.sub-menu li:first-child {
   background-color: #fff;
   padding: 10px;
   margin-bottom: 30px;
-  box-shadow: 2px 2px 20px transparent;
+  box-shadow: 2px 2px 5px transparent;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
 }
@@ -1058,7 +1103,7 @@ ul.sub-menu li:first-child {
 }
 
 .widget:hover {
-  box-shadow: 2px 2px 20px #222;
+  box-shadow: 2px 2px 5px #222;
 }
 
 .widget a:link,
@@ -1213,46 +1258,29 @@ div.wpcf7-response-output {
 9.11 Sidebar
 -------------------------------*/
 
-#sidebar-box {
-  height: auto;
-}
-
-#search .sidebar-wrapper,
-#archive .sidebar-wrapper {
-  top: 0px;
-}
-
-.sidebar-wrapper {
-  top: 30px;
-}
-
-.sidebar-posts-img-box img {
+/*.sidebar-posts-img-box img {
   display: block;
   width: 100%;
   height: auto;
   margin: 0 auto;
-}
-
-/*
+}*/
 
 .sidebar-posts-box {
   background-color: #092f87;
   padding: 10px;
 }
 
-.sidebar-posts-box,
-.sidebar-posts-banner-box{
+.sidebar-posts-box {
   margin-bottom: 30px;
-  box-shadow: 2px 0px 20px transparent;
+  box-shadow: 2px 2px 5px transparent;
   position: relative;
   z-index: 99;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
 }
 
-.sidebar-posts-box:hover,
-.sidebar-posts-banner-box:hover {
-  box-shadow: 2px 0px 20px #222;
+.sidebar-posts-box:hover {
+  box-shadow: 2px 2px 5px #222;
 }
 
 .sidebar-posts-box h4 {
@@ -1266,8 +1294,6 @@ div.wpcf7-response-output {
   color: #fff;
   margin-bottom: 15px;
 }
-
-*/
 
 /*-------------------------------
 9.12 Queries
@@ -1319,6 +1345,18 @@ div.wpcf7-response-output {
   
   .nav-links ul.sub-menu li {
     margin: 0;
+  }
+  
+  /* Post Destaque */
+  
+  .post-destaque-box,
+  .post-popular-box {
+    margin: 20px 0 0;
+  }
+  
+  .post-destaque-box-img img {
+    height: auto;
+    width: 100%;
   }
   
 }
@@ -1374,23 +1412,6 @@ div.wpcf7-response-output {
   
   .post-recent-box-info h3  {
     font-size: 1.0em;
-  }
-  
-  /* Post Destaque */
-  
-  .post-destaque-box {
-    margin: 20px 0 0;
-  }
-  
-  .post-destaque-box-img img {
-    height: auto;
-    width: 100%;
-  }
-  
-  /* Post Popular */
-  
-  .post-popular-box {
-    margin: 20px 0 0;
   }
   
   .post-popular-box-img img {
